--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ config/initializers/secret_token.rb
 ## Environment normalization:
 /.bundle
 /vendor/bundle
+railbook/vendor/bundler/
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
